--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -15,7 +15,8 @@ jobs:
     name: Swift ${{ matrix.swift }} on ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-13, macos-latest]
+#        os: [macos-13, macos-latest]
+        os: [macos-13]
         swift: ["5.8", "5.9"]
     runs-on: ${{ matrix.os }}
 
